fixed gallery grid gaps

--- a/src/css/pages/gallery.css
+++ b/src/css/pages/gallery.css
@@ -17,8 +17,10 @@
 
 .gallery-link {
   display: block;
-  max-width: 360px;
+  width: 360px;
+  height: 200px;
 }
+
 
 .gallery-image {
   width: 100%;
@@ -27,6 +29,7 @@
   transition: 1s ease;
   border: 1px solid grey;
 }
+
 
 .gallery-image:hover {
   transform: scale(1.05);
