--- a/src/css/pages/index.css
+++ b/src/css/pages/index.css
@@ -4,7 +4,7 @@
   justify-content: center;
   align-items: center;
   gap: 24px;
-  height: 95vh;
+  height: 100vh;
 }
 
 .link-item {
